--- a/css/styles.css
+++ b/css/styles.css
@@ -249,24 +249,22 @@ a:hover {
 
 /* Theme Toggle */
 .theme-toggle {
-    position: absolute;
-    bottom: 2rem;
-    left: 0;
-    right: 0;
     display: flex;
-    justify-content: center;
     align-items: center;
-    gap: 10px;
+    margin-top: 2rem;
+    padding: 1rem;
+    border-top: 1px solid rgba(255, 255, 255, 0.1);
 }
 
-.switch {
+.theme-switch {
     position: relative;
     display: inline-block;
     width: 50px;
     height: 24px;
+    margin-right: 10px;
 }
 
-.switch input {
+.theme-switch input {
     opacity: 0;
     width: 0;
     height: 0;
@@ -279,7 +277,7 @@ a:hover {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #ccc;
+    background-color: #4a5568;
     transition: .4s;
     border-radius: 24px;
 }
@@ -297,11 +295,7 @@ a:hover {
 }
 
 input:checked + .slider {
-    background-color: var(--primary-color);
-}
-
-input:focus + .slider {
-    box-shadow: 0 0 1px var(--primary-color);
+    background-color: #4299e1;
 }
 
 input:checked + .slider:before {
